--- a/style.css
+++ b/style.css
@@ -83,27 +83,49 @@ font-family: 'Courier New', Courier, monospace;
     border: 2px var(--primary-color);
     font-family: 'Courier New', Courier, monospace;
 }
-
 .img-section {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between; 
     width: 50%;
     background-color: var(--secondary-color);
 }
-.img-section h2 {
-    font-family: 'Courier New', Courier, monospace;
-    font-style: italic;
-}
-.img-section ul li {
-    display: inline;
-    list-style: none;
-    border: var(--tertiary-color) 10px;
+.imgArray {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    list-style: none;
+    margin: 20px 0 20px 0;
 }
-
+.img1 {
+    transition: transform .2s;
+    margin: 0;
+    border: #4a4763 solid 4px;
+}
+.img1:hover {
+    transform: scale(1.5);
+}
+.img2 {
+    transition: transform .2s;
+    margin: 0;
+    border: #4a4763 solid 4px;
+}
+.img2:hover {
+    transform: scale(1.5);
+}
+.img3 {
+    transition: transform .2s;
+    margin: 0;
+    border: #4a4763 solid 4px;
+}
+.img3:hover {
+    transform: scale(1.5);
+}
+.img4 {
+    transition: transform .2s;
+    margin: 0;
+    border: #4a4763 solid 4px;
+}
+.img4:hover {
+    transform: scale(1.5);
+}
 .contact-section {
     background-color: var(--secondary-color);
 }
@@ -121,4 +143,18 @@ footer p {
     opacity: .75;
     vertical-align: middle;
     font-family: 'Courier New', Courier, monospace;
+}
+
+@media screen and (max-width: 980px) {
+
+}
+
+@media screen and (max-width: 768px) {
+.img-section {
+    width: 100%;
+}
+}
+
+@media screen and (max-width: 575px) {
+
 }
