--- a/style.css
+++ b/style.css
@@ -88,7 +88,6 @@ font-family: 'Courier New', Courier, monospace;
 }
 .personal-image {
     background-color: var(--secondary-color);
-    float: left;
     margin: 20px;
     border: var(--primary-color) solid 5px;
 }
@@ -103,6 +102,10 @@ font-family: 'Courier New', Courier, monospace;
     list-style: none;
     margin: 20px 0 20px 0;
 }
+.img1text {
+    position: relative;
+    bottom: 8px;
+}
 .img1 {
     transition: transform .2s;
     margin: 0;
@@ -111,6 +114,7 @@ font-family: 'Courier New', Courier, monospace;
 .img1:hover {
     transform: scale(1.5);
 }
+
 .img2 {
     transition: transform .2s;
     margin: 0;
